fix(error-component): Update collapsed style

--- a/src/app/error/error-view/error-view.component.scss
+++ b/src/app/error/error-view/error-view.component.scss
@@ -41,3 +41,7 @@
 .Cell--Code {
   font-weight: bold;
 }
+
+mat-row.expandable-row:not(.expanded) {
+  min-height: 0;
+}
